WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124993
[EFL] PageViewportController does not need to be unique_ptr instance
https://bugs.webkit.org/show_bug.cgi?id=124993
Summary
[EFL] PageViewportController does not need to be unique_ptr instance
Ryuan Choi
Reported
2013-11-28 17:59:22 PST
PageViewportController and PageViewportControllerEfl have same life cycle with EwkView. So, we don't need to make them as unique_ptr instance.
Attachments
Patch
(8.77 KB, patch)
2013-11-28 18:53 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Patch
(9.04 KB, patch)
2013-11-28 19:26 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2013-11-28 18:53:49 PST
Created
attachment 218030
[details]
Patch
Ryuan Choi
Comment 2
2013-11-28 19:26:48 PST
Created
attachment 218031
[details]
Patch
Gyuyoung Kim
Comment 3
2013-11-28 19:34:13 PST
Comment on
attachment 218031
[details]
Patch Looks fine.
Ryuan Choi
Comment 4
2013-11-28 19:39:29 PST
Comment on
attachment 218031
[details]
Patch Clearing flags on attachment: 218031 Committed
r159863
: <
http://trac.webkit.org/changeset/159863
>
Ryuan Choi
Comment 5
2013-11-28 19:39:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug