[EFL] PageViewportController does not need to be unique_ptr instance https://bugs.webkit.org/show_bug.cgi?id=124993

Reviewed by Gyuyoung Kim.

PageViewportController and PageViewportControllerEfl have same life cycle
with EwkView. So, we don't need to make them as unique_ptr instance.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::EwkView):
(EwkView::handleEvasObjectCalculate):
(EwkView::scrollBy):
* UIProcess/API/efl/EwkView.h:
(EwkView::pageViewportController):
* UIProcess/efl/PageLoadClientEfl.cpp:
(WebKit::PageLoadClientEfl::didCommitLoadForFrame):
* UIProcess/efl/ViewClientEfl.cpp:
(WebKit::ViewClientEfl::didChangeContentsSize):
(WebKit::ViewClientEfl::didChangeContentsPosition):
(WebKit::ViewClientEfl::didRenderFrame):
(WebKit::ViewClientEfl::didCompletePageTransition):
(WebKit::ViewClientEfl::didChangeViewportAttributes):

Canonical link: https://commits.webkit.org/143114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159863 268f45cc-cd09-0410-ab3c-d52691b4dbfc