Source/WebKit2/UIProcess/efl/ViewClientEfl.cpp
@@ -53,7 +53,7 @@ void ViewClientEfl::didChangeContentsSize(WKViewRef, WKSize size, const void* cl
     EwkView* ewkView = toEwkView(clientInfo);
     if (WKPageUseFixedLayout(ewkView->wkPage()))
 #if USE(ACCELERATED_COMPOSITING)
-        ewkView->pageViewportController()->didChangeContentsSize(toIntSize(size));
+        ewkView->pageViewportController().didChangeContentsSize(toIntSize(size));
 #else
         { }
 #endif
@@ -103,7 +103,7 @@ void ViewClientEfl::didChangeContentsPosition(WKViewRef, WKPoint position, const
     EwkView* ewkView = toEwkView(clientInfo);
     if (WKPageUseFixedLayout(ewkView->wkPage())) {
 #if USE(ACCELERATED_COMPOSITING)
-        ewkView->pageViewportController()->pageDidRequestScroll(toIntPoint(position));
+        ewkView->pageViewportController().pageDidRequestScroll(toIntPoint(position));
 #else
         UNUSED_PARAM(position);
 #endif
@@ -118,7 +118,7 @@ void ViewClientEfl::didRenderFrame(WKViewRef, WKSize contentsSize, WKRect covere
     EwkView* ewkView = toEwkView(clientInfo);
     if (WKPageUseFixedLayout(ewkView->wkPage())) {
 #if USE(ACCELERATED_COMPOSITING)
-        ewkView->pageViewportController()->didRenderFrame(toIntSize(contentsSize), toIntRect(coveredRect));
+        ewkView->pageViewportController().didRenderFrame(toIntSize(contentsSize), toIntRect(coveredRect));
 #else
         UNUSED_PARAM(contentsSize);
         UNUSED_PARAM(coveredRect);
@@ -134,7 +134,7 @@ void ViewClientEfl::didCompletePageTransition(WKViewRef, const void* clientInfo)
     EwkView* ewkView = toEwkView(clientInfo);
     if (WKPageUseFixedLayout(ewkView->wkPage())) {
 #if USE(ACCELERATED_COMPOSITING)
-        ewkView->pageViewportController()->pageTransitionViewportReady();
+        ewkView->pageViewportController().pageTransitionViewportReady();
 #endif
         return;
     }
@@ -148,7 +148,7 @@ void ViewClientEfl::didChangeViewportAttributes(WKViewRef, WKViewportAttributesR
     if (WKPageUseFixedLayout(ewkView->wkPage())) {
 #if USE(ACCELERATED_COMPOSITING)
         // FIXME: pageViewportController should accept WKViewportAttributesRef.
-        ewkView->pageViewportController()->didChangeViewportAttributes(toImpl(attributes)->originalAttributes());
+        ewkView->pageViewportController().didChangeViewportAttributes(toImpl(attributes)->originalAttributes());
 #else
         UNUSED_PARAM(attributes);
 #endif
